# woplab

./: .gitignore  README.md  pyproject.toml
woplab/: cli.py  config.py  svg.py  template.py  vault.py
woplab/app/: main.py  routes.py
woplab/commands/: abc.py  config.py  run.py  vault.py
woplab/static/css/: style.css
woplab/templates/lab/: base.html  home.html
woplab/templates/vault/: base.html  report.html
